@@ -23,11 +23,11 @@ repositories {
 
 dependencies {
     compile 'org.apache.commons:commons-dbcp2:2.9.0'
-    compile 'org.apache.logging.log4j:log4j-api:2.17.1'
-    compile 'org.apache.logging.log4j:log4j-core:2.17.1'
-    compile 'com.oracle.database.jdbc:ojdbc8:19.8.0.0'
-    compile 'org.springframework:spring-beans:5.2.2.RELEASE'
-    compile 'org.springframework:spring-jdbc:5.2.2.RELEASE'
+    compile 'org.apache.logging.log4j:log4j-api:2.17.2'
+    compile 'org.apache.logging.log4j:log4j-core:2.17.2'
+    compile 'com.oracle.database.jdbc:ojdbc8:19.9.0.0'
+    compile 'org.springframework:spring-beans:5.2.3.RELEASE'
+    compile 'org.springframework:spring-jdbc:5.2.3.RELEASE'
 
     compile fileTree(dir: 'lib', include: '*.jar')
 }
