@@ -1,3 +1,6 @@
+Apr 18, 2022
+  fixed logging of dates
+
 Mar 07, 2022
   tuned up logging
 
